--- a/config/biocypher_config.yaml
+++ b/config/biocypher_config.yaml
@@ -13,6 +13,6 @@ biocypher:
 neo4j:
   delimiter: '\t'
   array_delimiter: '|'
-  quote_character: '"'
+  quote_character: '¦'
   skip_duplicate_nodes: true
   skip_bad_relationships: true
