add chatgse as compose step

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,9 +41,28 @@ services:
     ports:
       - "127.0.0.1:7474:7474"
       - "127.0.0.1:7687:7687"
+    networks:
+      - chatgse
     depends_on:
       import:
         condition: service_completed_successfully
 
+  app:
+    image: biocypher/chatgse:0.2.34
+    container_name: app
+    ports:
+      - "8501:8501"
+    networks:
+      - chatgse
+    depends_on:
+      import:
+        condition: service_completed_successfully
+    environment:
+      - OPENAI_API_KEY=${OPENAI_API_KEY}
+
 volumes:
   biocypher_neo4j_volume:
+
+
+networks:
+  chatgse:
