--- a/config/biocypher_docker_config.yaml
+++ b/config/biocypher_docker_config.yaml
@@ -16,7 +16,7 @@ neo4j:
   wipe: true
   delimiter: '\t'
   array_delimiter: '|'
-  quote_character: '"'
+  quote_character: "+"
   skip_duplicate_nodes: true
   skip_bad_relationships: true
   import_call_file_prefix: /data/build2neo
