fix broken ontology link by .. downloading and including a local file

--- a/config/biocypher_config.yaml
+++ b/config/biocypher_config.yaml
@@ -5,14 +5,14 @@ biocypher:
   debug: false
   schema_config_path: config/schema_config.yaml
 
-  head_ontology: 
-    url: http://semanticweb.cs.vu.nl/2009/11/sem/
+  head_ontology:
+    url: data/sem.file
     root_node: Core
     format: rdf
 
 neo4j:
   delimiter: '\t'
-  array_delimiter: '|'
-  quote_character: '+'
+  array_delimiter: "|"
+  quote_character: "+"
   skip_duplicate_nodes: true
   skip_bad_relationships: true
