--- a/config/biocypher_docker_config.yaml
+++ b/config/biocypher_docker_config.yaml
@@ -6,8 +6,8 @@ biocypher:
   schema_config_path: config/schema_config.yaml
   output_directory: data/build2neo
 
-  head_ontology: 
-    url: http://semanticweb.cs.vu.nl/2009/11/sem/
+  head_ontology:
+    url: data/sem.file
     root_node: Core
     format: rdf
 
@@ -15,7 +15,7 @@ neo4j:
   database_name: neo4j
   wipe: true
   delimiter: '\t'
-  array_delimiter: '|'
+  array_delimiter: "|"
   quote_character: "+"
   skip_duplicate_nodes: true
   skip_bad_relationships: true
