--- a/config/biocypher_docker_config.yaml
+++ b/config/biocypher_docker_config.yaml
@@ -3,20 +3,14 @@
 biocypher:
   offline: true
   debug: false
-  schema_config_path: config/schema_config.yaml
+  schema_config_path: config/schema_config_vhp.yaml
   output_directory: data/build2neo
-
-  head_ontology:
-    url: data/sem.file
-    root_node: Core
-    format: rdf
 
 neo4j:
   database_name: neo4j
   wipe: true
   delimiter: '\t'
-  array_delimiter: "|"
-  quote_character: "+"
+  array_delimiter: '|'
   skip_duplicate_nodes: true
   skip_bad_relationships: true
   import_call_file_prefix: /data/build2neo
