--- a/config/biocypher_config.yaml
+++ b/config/biocypher_config.yaml
@@ -3,12 +3,11 @@
 biocypher:
   offline: true
   debug: false
-  schema_config_path: config/schema_config.yaml
+  schema_config_path: config/schema_config_vhp.yaml
 
   head_ontology:
-    url: data/sem.file
-    root_node: Core
-    format: rdf
+      url: https://github.com/biolink/biolink-model/raw/v3.2.1/biolink-model.owl.ttl
+      root_node: entity
 
 neo4j:
   delimiter: '\t'
