--- a/config/biocypher_docker_config.yaml
+++ b/config/biocypher_docker_config.yaml
@@ -5,6 +5,10 @@ biocypher:
   debug: false
   schema_config_path: config/schema_config_vhp.yaml
   output_directory: data/build2neo
+  # Ontology configuration
+  head_ontology:
+      url: https://github.com/biolink/biolink-model/raw/v3.2.1/biolink-model.owl.ttl
+      root_node: entity
 
 neo4j:
   database_name: neo4j
