Pull in BioLink 4.2.2

--- a/config/biocypher_config.yaml
+++ b/config/biocypher_config.yaml
@@ -6,7 +6,7 @@ biocypher:
   schema_config_path: config/schema_config_vhp.yaml
 
   head_ontology:
-      url: https://github.com/biolink/biolink-model/raw/v3.2.1/biolink-model.owl.ttl
+      url: https://raw.githubusercontent.com/biolink/biolink-model/refs/tags/v4.2.2/project/owl/biolink_model.owl.ttl
       root_node: entity
 
 neo4j:
