--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -48,7 +48,7 @@ services:
         condition: service_completed_successfully
 
   app:
-    image: biocypher/biochatter-light:0.6.10
+    image: biocypher/biochatter-light:0.8.2
     container_name: app
     ports:
       - "8501:8501"
@@ -58,13 +58,14 @@ services:
       import:
         condition: service_completed_successfully
     environment:
-      - OPENAI_API_KEY=${OPENAI_API_KEY}
       - DOCKER_COMPOSE=true
       - CHAT_TAB=false
       - PROMPT_ENGINEERING_TAB=false
       - RAG_TAB=false
       - CORRECTING_AGENT_TAB=false
       - KNOWLEDGE_GRAPH_TAB=true
+      - FILLING_TEMPLATE_TAB=true
+      - FILLING_TEMPLATE_API_URL=https://api.github.com/repos/marvinm2/pole/contents/data
 
 volumes:
   biocypher_neo4j_volume:
